docs(frameworks): added documentation about all frameworks

--- a/docs/docs/main/frameworks/fastify.mdx
+++ b/docs/docs/main/frameworks/fastify.mdx
@@ -3,4 +3,36 @@ title: Fastify
 position: 3
 ---
 
-Work in progress.
+First, you need to ensure you have the libs installed, so run this code:
+
+```bash
+npm i --save fastify
+```
+
+Then, you need you just need to use the [FastifyFramework](../../api/Frameworks/FastifyFramework) when you create your adapter, like:
+
+```ts title="index.ts"
+import { ServerlessAdapter } from '@h4ad/serverless-adapter';
+import { FastifyFramework } from '@h4ad/serverless-adapter/lib/frameworks/fastify';
+
+const Fastify = require('fastify');
+
+const app = Fastify({ logger: true });
+export const handler = ServerlessAdapter.new(app)
+  .setFramework(new FastifyFramework())
+  // continue to set the other options here.
+  //.setHandler(new DefaultHandler())
+  //.setResolver(new PromiseResolver())
+  //.addAdapter(new AlbAdapter())
+  //.addAdapter(new SQSAdapter())
+  //.addAdapter(new SNSAdapter())
+  // after put all methods necessary, just call the build method.
+  .build();
+```
+
+:::tip
+
+Is your application instance creation asynchronous? Look the [LazyFramework](./lazy) which helps you in asynchronous startup.
+
+:::
+
