--- a/docs/docs/main/resolvers/callback.mdx
+++ b/docs/docs/main/resolvers/callback.mdx
@@ -3,4 +3,52 @@ title: Callback
 position: 2
 ---
 
-Work in progress.
+:::tip
+
+Don't know what a resolver is? See the [Architecture](../architecture#resolver) section.
+
+:::
+
+The best and most agnostic resolver (for sure) is using callback, generally every serverless environment supports callback as the third argument of the handler.
+
+When the handler is created with [getHandler](../../api/Contracts/HandlerContract#method-gethandler), it will return void
+and the cloud will wait until the event loop is empty.
+This happens when your framework sends the response and the adapter transforms the response the way your cloud can handle,
+at this point the response will be passed to the callback and then the event loop will be empty.
+
+You can use this resolver with any cloud, with any framework or any adapter.
+
+:::caution AWS
+
+To use this resolver on AWS, you MUST leave [callbackWaitsForEmptyEventLoop](https://docs.aws.amazon.com/lambda/latest/dg/nodejs-context.html) as true, otherwise, AWS will not wait for this resolver to resolve.
+
+:::
+
+# Usage
+
+To use, you can import and call the method [setResolver](../../api/ServerlessAdapter#method-setresolver), as per the code below:
+
+```ts title="index.ts"
+import { ServerlessAdapter } from '@h4ad/serverless-adapter';
+import { CallbackResolver } from '@h4ad/serverless-adapter/lib/resolvers/callback';
+
+const express = require('express');
+
+const app = express();
+export const handler = ServerlessAdapter.new(app)
+  .setResolver(new CallbackResolver())
+  // continue to set the other options here.
+  //.setFramework(new ExpressFramework())
+  //.setHandler(new DefaultHandler())
+  //.addAdapter(new AlbAdapter())
+  //.addAdapter(new SQSAdapter())
+  //.addAdapter(new SNSAdapter())
+  // after put all methods necessary, just call the build method.
+  .build();
+```
+
+:::tip
+
+To know more about how AWS deals with callback handlers, see [NodeJS Handler](https://docs.aws.amazon.com/lambda/latest/dg/nodejs-handler.html) section.
+
+:::
