docs(mdx.description): added description to resolvers, frameworks and getting started blocks

--- a/docs/docs/main/frameworks/express.mdx
+++ b/docs/docs/main/frameworks/express.mdx
@@ -1,6 +1,7 @@
 ---
 title: Express
 position: 1
+description: See more about how to integrate with Express.
 ---
 
 First, you need to ensure you have the libs installed, so run this code:
