--- a/docs/docs/main/frameworks/fastify.mdx
+++ b/docs/docs/main/frameworks/fastify.mdx
@@ -1,6 +1,7 @@
 ---
 title: Fastify
 position: 3
+description: See more about how to integrate with Fastify.
 ---
 
 First, you need to ensure you have the libs installed, so run this code:
