--- a/docs/docs/main/frameworks/koa.mdx
+++ b/docs/docs/main/frameworks/koa.mdx
@@ -1,6 +1,7 @@
 ---
 title: Koa
 position: 5
+description: See more about how to integrate with Koa.
 ---
 
 First, you need to ensure you have the libs installed, so run this code:
