--- a/docs/docs/main/frameworks/lazy.mdx
+++ b/docs/docs/main/frameworks/lazy.mdx
@@ -1,6 +1,7 @@
 ---
 title: Lazy
 position: 6
+description: See more about how to use Lazy Framework.
 ---
 
 This framework is a helper framework that wraps another framework and receives a function to asynchronously initialize the application.
