--- a/docs/docs/main/frameworks/nestjs.mdx
+++ b/docs/docs/main/frameworks/nestjs.mdx
@@ -1,7 +1,9 @@
 ---
 title: NestJS
 position: 2
+description: See more about how to integrate with NestJS.
 ---
+
 
 import BrowserWindow from '@site/src/components/BrowserWindow';
 import TabItem from '@theme/TabItem';
