--- a/docs/docs/main/getting-started/customizing.mdx
+++ b/docs/docs/main/getting-started/customizing.mdx
@@ -1,11 +1,10 @@
 ---
 title: Customizing
 position: 2
+description: See more about how to customize this library.
 ---
 
-import BrowserWindow from '@site/src/components/BrowserWindow';
-import TabItem from '@theme/TabItem';
-import Tabs from '@theme/Tabs';
+
 
 With the instance of adapter, we have some options:
 
