--- a/docs/docs/main/getting-started/installation.mdx
+++ b/docs/docs/main/getting-started/installation.mdx
@@ -1,7 +1,9 @@
 ---
 title: Installation
 position: 1
+description: See more about how to install this library.
 ---
+
 
 import TabItem from '@theme/TabItem';
 import Tabs from '@theme/Tabs';
