--- a/docs/docs/main/getting-started/usage.mdx
+++ b/docs/docs/main/getting-started/usage.mdx
@@ -1,11 +1,10 @@
 ---
 title: Usage
 position: 2
+description: See more about how to use this library.
 ---
 
-import BrowserWindow from '@site/src/components/BrowserWindow';
-import TabItem from '@theme/TabItem';
-import Tabs from '@theme/Tabs';
+
 
 To start to use, first you need to know what you need to import, let's start showing the [ServerlessAdapter](/docs/api/ServerlessAdapter).
 
