--- a/docs/docs/main/frameworks/hapi.mdx
+++ b/docs/docs/main/frameworks/hapi.mdx
@@ -1,6 +1,7 @@
 ---
 title: Hapi
 position: 4
+description: See more about how to integrate with Hapi.
 ---
 
 First, you need to ensure you have the libs installed, so run this code:
