docs(docs & readme): added many fixes and update docs & changed readme to point to docs site

--- a/docs/docs/main/intro.mdx
+++ b/docs/docs/main/intro.mdx
@@ -17,6 +17,7 @@ Why you would use this libray instead of [@vendia/serverless-express](https://gi
   - This is important because if you find a bug, you can quickly resolve it by extending the class, _and then you can
     submit a PR to fix the bug_.
 - All code was written in Typescript.
+- Well documented, any method, class, or interface has comments to explain the behavior.
 - We have >99% coverage.
 
 ## Support
@@ -37,45 +38,55 @@ If you don't know what each thing means, see [Architecture](./architecture).
 
 Currently, we support these frameworks:
 
-- [NestJS](https://nestjs.com/) with ([ExpressFramework](src/frameworks/express/express.framework.ts)) or ([FastifyFramework](src/frameworks/fastify/fastify.framework.ts)).
-- [Express](https://expressjs.com/) by using ([ExpressFramework](src/frameworks/express/express.framework.ts))
-- [Fastify](https://www.fastify.io/) by using ([FastifyFramework](src/frameworks/fastify/fastify.framework.ts))
-- [Hapi](https://hapi.dev/) by using ([HapiFramework](src/frameworks/hapi/hapi.framework.ts))
-- [Koa](https://koajs.com/) by using ([KoaFramework](src/frameworks/koa/koa.framework.ts))
+- [NestJS](https://nestjs.com/), see the [documentation about](./frameworks/nestjs) to know how to integrate.
+- [Express](https://expressjs.com/) by using ([ExpressFramework](./frameworks/express))
+- [Fastify](https://www.fastify.io/) by using ([FastifyFramework](./frameworks/fastify))
+- [Hapi](https://hapi.dev/) by using ([HapiFramework](./frameworks/hapi))
+- [Koa](https://koajs.com/) by using ([KoaFramework](./frameworks/koa))
+- Async Initialization by using ([LazyFramework](./frameworks/lazy))
+  - Use this framework to provide a way to create the instance of your app asynchronously.
+  - With him, you can create an instance of Express or Fastify asynchronously, [see the docs](./frameworks/lazy).
 
 We support these event sources:
 
 - AWS
   - [AWS Load Balancer](https://docs.aws.amazon.com/lambda/latest/dg/services-alb.html) by
-    using ([AlbAdapter](./src/adapters/aws/alb.adapter.ts))
+    using ([AlbAdapter](./adapters/aws/alb))
   - [AWS Api Gateway V1](https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-develop-integrations-lambda.html)
-    by using ([ApiGatewayV1Adapter](./src/adapters/aws/api-gateway-v1.adapter.ts))
+    by using ([ApiGatewayV1Adapter](./adapters/aws/api-gateway-v1))
   - [AWS Api Gateway V2](https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-develop-integrations-lambda.html)
-    by using ([ApiGatewayV2Adapter](./src/adapters/aws/api-gateway-v2.adapter.ts))
+    by using ([ApiGatewayV2Adapter](./adapters/aws/api-gateway-v2))
   - [AWS DynamoDB](https://docs.aws.amazon.com/lambda/latest/dg/with-ddb.html) by
-    using ([DynamoDBAdapter](./src/adapters/aws/dynamodb.adapter.ts))
+    using ([DynamoDBAdapter](./adapters/aws/dynamodb))
   - [AWS Event Bridge / CloudWatch Events](https://docs.aws.amazon.com/lambda/latest/dg/services-cloudwatchevents.html)
-    by using ([EventBridgeAdapter](./src/adapters/aws/event-bridge.adapter.ts))
+    by using ([EventBridgeAdapter](./adapters/aws/event-bridge))
   - [AWS Lambda Edge](https://docs.aws.amazon.com/lambda/latest/dg/lambda-edge.html) by
-    using ([LambdaEdgeAdapter](./src/adapters/aws/lambda-edge.adapter.ts))
+    using ([LambdaEdgeAdapter](./adapters/aws/lambda-edge))
   - [AWS SNS](https://docs.aws.amazon.com/pt_br/lambda/latest/dg/with-sns.html) by
-    using ([SNSAdapter](./src/adapters/aws/sns.adapter.ts))
+    using ([SNSAdapter](./adapters/aws/sns))
   - [AWS SQS](https://docs.aws.amazon.com/pt_br/lambda/latest/dg/with-sqs.html) by
-    using ([SQSAdapter](./src/adapters/aws/sqs.adapter.ts))
-- Azure
-  - The support is coming soon.
+    using ([SQSAdapter](./adapters/aws/sqs))
 - Huawei
+  - [Http Function](https://support.huaweicloud.com/intl/en-us/usermanual-functiongraph/functiongraph_01_1442.html): Look [this section](./handlers/huawei#http-function).
+  - [Event Function](https://support.huaweicloud.com/intl/en-us/usermanual-functiongraph/functiongraph_01_1441.html): Look [this section](./handlers/huawei#event-function).
+  - [Api Gateway](https://support.huaweicloud.com/intl/en-us/devg-functiongraph/functiongraph_02_0102.html#functiongraph_02_0102__li5178638110137) by using ([HuaweiApiGatewayAdapter](./adapters/huawei/huawei-api-gateway)).
+- Azure
+  - [The support is coming soon.](https://github.com/H4ad/serverless-adapter/issues/3)
+- Firebase
+  - The support is coming soon.
+- GCP
   - The support is coming soon.
 
 We support these resolvers:
 
-- Promise by using ([PromiseResolver](src/resolvers/promise/promise.resolver.ts))
-- Callback by using ([CallbackResolver](src/resolvers/callback/callback.resolver.ts))
-- AWS Context by using ([AwsContextResolver](src/resolvers/aws-context/aws-context.resolver.ts))
+- Promise by using ([PromiseResolver](./resolvers/promise))
+- Callback by using ([CallbackResolver](./resolvers/callback))
+- AWS Context by using ([AwsContextResolver](./resolvers/aws-context))
 
 We support these handlers:
 
-- Default by using ([DefaultHandler](src/handlers/default/default.handler.ts))
+- Default by using ([DefaultHandler](./handlers/default))
+- Huawei by using ([HttpHuaweiHandler](./handlers/huawei#http-function)) and ([EventHuaweiHandler](./handlers/huawei#event-function))
 
 ## Why you create this library?
 
