docs(files): moved files from docs to www folder

--- a/www/docs/main/getting-started/customizing.mdx
+++ b/www/docs/main/getting-started/customizing.mdx
@@ -14,7 +14,7 @@ Defines the handler that will get the event, context and callback and pass it to
 
 :::tip
 
-See supported handlers in [Handlers Section](../handlers)
+See supported handlers in [Handlers Section](/docs/main/handlers/default))
 
 :::
 
@@ -26,7 +26,7 @@ Defines the resolver that aims to resolve the response to serverless and stop it
 
 :::tip
 
-See supported resolvers in [Resolvers Section](../resolvers)
+See supported resolvers in [Resolvers Section](/docs/main/resolvers/promise))
 
 :::
 
@@ -38,7 +38,7 @@ Defines the framework that will process requests.
 
 :::tip
 
-See supported frameworks in [Framewoks Section](../frameworks)
+See supported frameworks in [Frameworks Section](/docs/main/frameworks/nestjs))
 
 :::
 
@@ -85,7 +85,7 @@ You can call this method multiple times to add support for whatever event source
 
 :::tip
 
-To know which adapters you can use, see the [Adapters](../adapters) section.
+To know which adapters you can use, see the [Adapters](/docs/main/adapters/introduction)) section.
 
 :::
 
