--- a/www/docs/main/handlers/huawei.mdx
+++ b/www/docs/main/handlers/huawei.mdx
@@ -88,3 +88,10 @@ You must use the callback resolver because I couldn't get it to work with the Pr
 Maybe it's a bug in the library or something specific in Huawei, if you have a hint please create an issue.
 
 :::
+
+## Sponsor
+
+This handler was sponsored by [Liga](https://liga.facens.br/), if you want to built an app, site or game (mobile, AR or VR), send an email to [liga@facens.br].
+
+| <a href="https://liga.facens.br/"><img height="50" src="https://mlogu6g7z5ex.i.optimole.com/yEwfkqo-4R0ttNtd/w:auto/h:auto/q:mauto/f:avif/http://liga.facens.br/wp-content/uploads/2020/03/logo-1.png" title="The LIGA logo" width="100"/></a> |
+|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
