--- a/www/docs/main/adapters/aws/dynamodb.mdx
+++ b/www/docs/main/adapters/aws/dynamodb.mdx
@@ -1,5 +1,109 @@
 ---
 title: DynamoDB
+description: See more about how to integrate with AWS DynamoDB.
 ---
 
-Work in progress.
+
+The adapter to handle requests from [AWS DynamoDB](https://docs.aws.amazon.com/lambda/latest/dg/with-ddb.html).
+
+:::info
+
+The option of `responseWithErrors` is ignored by this adapter and we always call `resolver.fail` with the error.
+
+:::
+
+## Typescript
+
+To correctly type your `body` when receiving the AWS DynamoDB request, you must install `aws-lambda`:
+
+```bash
+npm i --save-dev @types/aws-lambda
+```
+
+## About the adapter
+
+In AWS DynamoDB, you don't have requests, you just receive the records in the `event` property of the handler.
+
+So, in order to handle this adapter, by default we create a `POST` request to `/dynamo` with the `body` being the `event` property as JSON.
+
+```json title="dynamodb-event-example.json"
+{
+  "Records": [
+    {
+      "eventID": "1",
+      "eventVersion": "1.0",
+      "dynamodb": {
+        "Keys": {
+          "Id": {
+            "N": "101"
+          }
+        },
+        "NewImage": {
+          "Message": {
+            "S": "New item!"
+          },
+          "Id": {
+            "N": "101"
+          }
+        },
+        "StreamViewType": "NEW_AND_OLD_IMAGES",
+        "SequenceNumber": "111",
+        "SizeBytes": 26
+      },
+      "awsRegion": "us-west-2",
+      "eventName": "INSERT",
+      "eventSourceARN": "arn:aws:dynamodb:us-east-1:111122223333:table/EventSourceTable",
+      "eventSource": "aws:dynamodb"
+    }
+  ]
+}
+```
+
+Normally, your framework will parse this JSON and return the parsed values as javascript objects.
+
+:::tip
+
+To correctly type your body, you can use:
+
+```ts
+import type { DynamoDBStreamEvent } from 'aws-lambda';
+```
+
+:::
+
+## Customizing
+
+You can change the HTTP Method and Path that will be used to create the request by sending `dynamoDBForwardMethod` and `dynamoDBForwardPath` inside [DynamoDBAdapter](/docs/api/Adapters/AWS/DynamoDBAdapter).
+
+## Usage
+
+To add support to AWS DynamoDB you do the following:
+
+```ts title="index.ts"
+import { ServerlessAdapter } from '@h4ad/serverless-adapter';
+import { DynamoDBAdapter } from '@h4ad/serverless-adapter/lib/adapters/aws';
+import { DefaultHandler } from '@h4ad/serverless-adapter/lib/handlers/default';
+import app from './app';
+
+export const handler = ServerlessAdapter.new(app)
+  .setHandler(new DefaultHandler())
+  // .setFramework(new ExpressFramework())
+  // .setResolver(new PromiseResolver())
+  .addAdapter(new DynamoDBAdapter())
+  // customizing:
+  // .addAdapter(new DynamoDBAdapter({ dynamoDBForwardPath: '/prod/dynamo', dynamoDBForwardMethod: 'PUT' }))
+  .build();
+```
+
+:::caution
+
+When you configure your API with some `basePath` like `/prod`, you should set `dynamoDBForwardPath` as `/prod/dynamo` instead leave as default `/dynamo`.
+
+:::
+
+## Security
+
+You **MUST** check if the header `Host` contains the value of `dynamodb.amazonaws.com`.
+
+Without checking this header, if you add this adapter and [AWS API Gateway V2](./api-gateway-v2) adapter, you will be vulnerable to attacks
+because anyone can create a `POST` request to `/dynamo`.
