--- a/www/docs/main/handlers/huawei.mdx
+++ b/www/docs/main/handlers/huawei.mdx
@@ -66,7 +66,7 @@ but with Event Function you should use [DefaultHandler](./default).
 
 So, to add support to Api Gateway you do the following:
 
-```ts
+```ts title="index.ts"
 import { ServerlessAdapter } from '@h4ad/serverless-adapter';
 import { HuaweiApiGatewayAdapter } from '@h4ad/serverless-adapter/lib/adapters/huawei';
 import { ExpressFramework } from '@h4ad/serverless-adapter/lib/frameworks/express';
